refs/ps/testcases/A3/Testcases/Error/tc11.c
int a;
void main()
{
    int a,b;
    a = a>b?a+b : b||a;
    print a;
}